@@ -22,7 +22,9 @@
 
 package net.solarnetwork.central.c2c.biz.impl.test;
 
+import static java.time.Instant.now;
 import static net.solarnetwork.central.c2c.biz.CloudDatumStreamService.VIRTUAL_SOURCE_IDS_SETTING;
+import static net.solarnetwork.central.c2c.domain.CloudDatumStreamValueType.SpelExpression;
 import static net.solarnetwork.central.c2c.domain.CloudIntegrationsConfigurationEntity.PLACEHOLDERS_SERVICE_PROPERTY;
 import static net.solarnetwork.central.test.CommonTestUtils.randomLong;
 import static net.solarnetwork.central.test.CommonTestUtils.randomString;
@@ -36,7 +38,6 @@ import java.time.Clock;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -59,7 +60,6 @@ import net.solarnetwork.central.c2c.domain.CloudDatumStreamConfiguration;
 import net.solarnetwork.central.c2c.domain.CloudDatumStreamPropertyConfiguration;
 import net.solarnetwork.central.c2c.domain.CloudDatumStreamQueryFilter;
 import net.solarnetwork.central.c2c.domain.CloudDatumStreamQueryResult;
-import net.solarnetwork.central.c2c.domain.CloudDatumStreamValueType;
 import net.solarnetwork.central.common.dao.SolarNodeMetadataReadOnlyDao;
 import net.solarnetwork.central.dao.SolarNodeOwnershipDao;
 import net.solarnetwork.central.datum.v2.dao.DatumStreamMetadataDao;
@@ -69,7 +69,6 @@ import net.solarnetwork.domain.LocalizedServiceInfo;
 import net.solarnetwork.domain.datum.Datum;
 import net.solarnetwork.domain.datum.DatumId;
 import net.solarnetwork.domain.datum.DatumSamples;
-import net.solarnetwork.domain.datum.DatumSamplesType;
 import net.solarnetwork.domain.datum.GeneralDatum;
 import net.solarnetwork.domain.datum.GeneralDatumMetadata;
 import net.solarnetwork.domain.datum.ObjectDatumKind;
@@ -145,7 +144,7 @@ public class BaseCloudDatumStreamServiceTests {
 				List<String> supportedPlaceholders) {
 			super("test", "Test", Clock.systemUTC(), userEventAppenderBiz, encryptor, expressionService,
 					integrationDao, datumStreamDao, datumStreamMappingDao, datumStreamPropertyDao,
-					Collections.emptyList());
+					List.of());
 			this.supportedPlaceholders = supportedPlaceholders;
 			setDatumStreamMetadataDao(datumStreamMetadataDao);
 			setDatumStreamMetadataCache(datumStreamMetadataCache);
@@ -287,17 +286,14 @@ public class BaseCloudDatumStreamServiceTests {
 		final var datumStreamId = randomLong();
 		final var mappingId = randomLong();
 
-		final var datumStream = new CloudDatumStreamConfiguration(userId, datumStreamId, Instant.now());
+		final var datumStream = new CloudDatumStreamConfiguration(userId, datumStreamId, now(),
+				randomString(), randomString(), ObjectDatumKind.Node);
 
-		final var exprProp = new CloudDatumStreamPropertyConfiguration(userId, mappingId, 0,
-				Instant.now());
+		final var exprProp = new CloudDatumStreamPropertyConfiguration(userId, mappingId, 0, now(),
+				Instantaneous, "out", SpelExpression, """
+						metadata('/m/foo')
+						""");
 		exprProp.setEnabled(true);
-		exprProp.setPropertyName("out");
-		exprProp.setPropertyType(DatumSamplesType.Instantaneous);
-		exprProp.setValueType(CloudDatumStreamValueType.SpelExpression);
-		exprProp.setValueReference("""
-				metadata('/m/foo')
-				""");
 
 		final var datum = GeneralDatum.nodeDatum(nodeId, sourceId,
 				Instant.now().truncatedTo(ChronoUnit.HOURS), new DatumSamples());
@@ -335,17 +331,14 @@ public class BaseCloudDatumStreamServiceTests {
 		final var datumStreamId = randomLong();
 		final var mappingId = randomLong();
 
-		final var datumStream = new CloudDatumStreamConfiguration(userId, datumStreamId, Instant.now());
+		final var datumStream = new CloudDatumStreamConfiguration(userId, datumStreamId, now(),
+				randomString(), randomString(), ObjectDatumKind.Node);
 
-		final var exprProp = new CloudDatumStreamPropertyConfiguration(userId, mappingId, 0,
-				Instant.now());
+		final var exprProp = new CloudDatumStreamPropertyConfiguration(userId, mappingId, 0, now(),
+				Instantaneous, "out", SpelExpression, """
+						nodeMetadata('/m/foo')
+						""");
 		exprProp.setEnabled(true);
-		exprProp.setPropertyName("out");
-		exprProp.setPropertyType(DatumSamplesType.Instantaneous);
-		exprProp.setValueType(CloudDatumStreamValueType.SpelExpression);
-		exprProp.setValueReference("""
-				nodeMetadata('/m/foo')
-				""");
 
 		final var datum = GeneralDatum.nodeDatum(nodeId, sourceId,
 				Instant.now().truncatedTo(ChronoUnit.HOURS), new DatumSamples());
@@ -386,31 +379,23 @@ public class BaseCloudDatumStreamServiceTests {
 		// configure a single /gen/1 source ID
 		final var siteId = randomString();
 		final var virtualSourceId = "/{site}/gen/1";
-		final var datumStream = new CloudDatumStreamConfiguration(userId, datumStreamId, Instant.now());
-		datumStream.setKind(ObjectDatumKind.Node);
+		final var datumStream = new CloudDatumStreamConfiguration(userId, datumStreamId, now(),
+				randomString(), randomString(), ObjectDatumKind.Node);
 		datumStream.setObjectId(nodeId);
 		datumStream.setServiceProps(Map.of(VIRTUAL_SOURCE_IDS_SETTING, virtualSourceId,
 				PLACEHOLDERS_SERVICE_PROPERTY, Map.of("site", siteId)));
 
 		final var exprProp1 = new CloudDatumStreamPropertyConfiguration(userId, mappingId, 0,
-				Instant.now());
+				Instant.now(), Instantaneous, "v1", SpelExpression, """
+						sourceId.contains('/gen/') ? sum(latestMatching('/inv/*', timestamp).![w]) : null
+						""");
 		exprProp1.setEnabled(true);
-		exprProp1.setPropertyName("v1");
-		exprProp1.setPropertyType(DatumSamplesType.Instantaneous);
-		exprProp1.setValueType(CloudDatumStreamValueType.SpelExpression);
-		exprProp1.setValueReference("""
-				sourceId.contains('/gen/') ? sum(latestMatching('/inv/*', timestamp).![w]) : null
-				""");
 
 		final var exprProp2 = new CloudDatumStreamPropertyConfiguration(userId, mappingId, 1,
-				Instant.now());
+				Instant.now(), Instantaneous, "v2", SpelExpression, """
+						sourceId.contains('/gen/') ? sum(latestMatching('/inv/*', timestamp).![a]) : null
+						""");
 		exprProp2.setEnabled(true);
-		exprProp2.setPropertyName("v2");
-		exprProp2.setPropertyType(DatumSamplesType.Instantaneous);
-		exprProp2.setValueType(CloudDatumStreamValueType.SpelExpression);
-		exprProp2.setValueReference("""
-				sourceId.contains('/gen/') ? sum(latestMatching('/inv/*', timestamp).![a]) : null
-				""");
 
 		// create 2 datum streams, each with 2 datum
 		final var inv1Datum1 = GeneralDatum.nodeDatum(nodeId, "/inv/1",
@@ -474,14 +459,14 @@ public class BaseCloudDatumStreamServiceTests {
 
 		and.then(result).element(4)
 			.as("Virtual datum added for 1st timestamp")
-			.returns(new DatumId(datumStream.getKind(), datumStream.getObjectId(), "/%s/gen/1".formatted(siteId), inv1Datum1.getTimestamp()),
+			.returns(DatumId.datumId(datumStream.getKind(), datumStream.getObjectId(), "/%s/gen/1".formatted(siteId), inv1Datum1.getTimestamp()),
 					from(GeneralDatum::getId))
 			.as("Samples are sum() of inv1d1 + inv1d2")
 			.returns(new DatumSamples(Map.of("v1", 468, "v2", 864), null, null), from(GeneralDatum::getSamples))
 			;
 		and.then(result).element(5)
 			.as("Virtual datum added for 2nd timestamp")
-			.returns(new DatumId(datumStream.getKind(), datumStream.getObjectId(), "/%s/gen/1".formatted(siteId), inv1Datum2.getTimestamp()),
+			.returns(DatumId.datumId(datumStream.getKind(), datumStream.getObjectId(), "/%s/gen/1".formatted(siteId), inv1Datum2.getTimestamp()),
 					from(GeneralDatum::getId))
 			.as("Samples are sum() of inv1d2 + inv2d2")
 			.returns(new DatumSamples(Map.of("v1", 690, "v2", 1086), null, null), from(GeneralDatum::getSamples))
