@@ -47,14 +47,15 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.BDDMockito.then;
 import static org.mockito.BDDMockito.willDoNothing;
+import static org.springframework.security.crypto.encrypt.Encryptors.noOpText;
 import java.net.URI;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.Arrays;
 import java.util.Base64;
-import java.util.Collections;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Set;
 import java.util.random.RandomGenerator;
 import org.apache.commons.codec.digest.DigestUtils;
 import org.junit.jupiter.api.BeforeEach;
@@ -134,8 +135,7 @@ public class EnphaseCloudIntegrationServiceTests {
 	@Captor
 	private ArgumentCaptor<RequestEntity<JsonNode>> jsonRequestCaptor;
 
-	@Mock
-	private TextEncryptor encryptor;
+	private TextEncryptor encryptor = noOpText();
 
 	private MutableClock clock = MutableClock.of(Instant.now().truncatedTo(ChronoUnit.DAYS), UTC);
 
@@ -143,9 +143,8 @@ public class EnphaseCloudIntegrationServiceTests {
 
 	@BeforeEach
 	public void setup() {
-		service = new EnphaseCloudIntegrationService(Collections.singleton(datumStreamService),
-				userEventAppenderBiz, encryptor, integrationDao, rng, restOps, oauthClientManager, clock,
-				null);
+		service = new EnphaseCloudIntegrationService(Set.of(datumStreamService), userEventAppenderBiz,
+				encryptor, integrationDao, rng, restOps, oauthClientManager, clock, null);
 
 		ResourceBundleMessageSource msg = new ResourceBundleMessageSource();
 		msg.setBasenames(EnphaseCloudIntegrationService.class.getName(),
@@ -157,7 +156,7 @@ public class EnphaseCloudIntegrationServiceTests {
 	public void validate_missingAuthSettings() {
 		// GIVEN
 		final CloudIntegrationConfiguration conf = new CloudIntegrationConfiguration(TEST_USER_ID,
-				randomLong(), now());
+				randomLong(), now(), randomString(), randomString());
 		// @formatter:off
 		conf.setServiceProps(Map.of(
 				"foo", "bar"
@@ -229,7 +228,7 @@ public class EnphaseCloudIntegrationServiceTests {
 		final String refreshToken = randomString();
 
 		final CloudIntegrationConfiguration conf = new CloudIntegrationConfiguration(TEST_USER_ID,
-				randomLong(), now());
+				randomLong(), now(), randomString(), randomString());
 		// @formatter:off
 		conf.setServiceProps(Map.of(
 				API_KEY_SETTING, apiKey,
@@ -310,7 +309,7 @@ public class EnphaseCloudIntegrationServiceTests {
 		final String refreshToken = randomString();
 
 		final CloudIntegrationConfiguration conf = new CloudIntegrationConfiguration(TEST_USER_ID,
-				randomLong(), now());
+				randomLong(), now(), randomString(), randomString());
 		// @formatter:off
 		conf.setServiceProps(Map.of(
 				API_KEY_SETTING, apiKey,
@@ -395,7 +394,7 @@ public class EnphaseCloudIntegrationServiceTests {
 		final String clientId = randomString();
 
 		final CloudIntegrationConfiguration conf = new CloudIntegrationConfiguration(TEST_USER_ID,
-				randomLong(), now());
+				randomLong(), now(), randomString(), randomString());
 		// @formatter:off
 		conf.setServiceProps(Map.of(
 				OAUTH_CLIENT_ID_SETTING, clientId
@@ -456,7 +455,7 @@ public class EnphaseCloudIntegrationServiceTests {
 		final Locale locale = Locale.getDefault();
 
 		final CloudIntegrationConfiguration conf = new CloudIntegrationConfiguration(TEST_USER_ID,
-				integrationId, now());
+				integrationId, now(), randomString(), randomString());
 		// @formatter:off
 		conf.setServiceProps(Map.of(
 				OAUTH_CLIENT_ID_SETTING, clientId,
