@@ -22,7 +22,6 @@
 
 package net.solarnetwork.central.c2c.dao.jdbc.test;
 
-import static java.util.Collections.singletonMap;
 import static net.solarnetwork.central.c2c.dao.jdbc.test.CinJdbcTestUtils.allCloudControlConfigurationData;
 import static net.solarnetwork.central.c2c.dao.jdbc.test.CinJdbcTestUtils.newCloudControlConfiguration;
 import static net.solarnetwork.central.test.CommonTestUtils.RNG;
@@ -35,7 +34,6 @@ import java.sql.Timestamp;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import org.junit.jupiter.api.BeforeEach;
@@ -99,9 +97,9 @@ public class JdbcCloudControlConfigurationDaoTests extends AbstractJUnit5JdbcDao
 	public void insert() {
 		// GIVEN
 		final CloudIntegrationConfiguration integration = createIntegration(userId,
-				singletonMap("bim", "bam"));
+				Map.of("bim", "bam"));
 
-		Map<String, Object> props = singletonMap("foo", "bar");
+		Map<String, Object> props = Map.of("foo", "bar");
 		// @formatter:off
 		CloudControlConfiguration conf = newCloudControlConfiguration(userId,
 				integration.getConfigId(),
@@ -189,7 +187,7 @@ public class JdbcCloudControlConfigurationDaoTests extends AbstractJUnit5JdbcDao
 		conf.setControlId(randomString());
 		conf.setControlReference(randomString());
 
-		Map<String, Object> props = Collections.singletonMap("bar", "foo");
+		Map<String, Object> props = Map.of("bar", "foo");
 		conf.setServiceProps(props);
 
 		UserLongCompositePK result = dao.save(conf);
@@ -228,13 +226,13 @@ public class JdbcCloudControlConfigurationDaoTests extends AbstractJUnit5JdbcDao
 		final List<Long> userIds = new ArrayList<>(userCount);
 		final List<CloudControlConfiguration> confs = new ArrayList<>(count);
 
-		final Map<String, Object> props = Collections.singletonMap("foo", "bar");
+		final Map<String, Object> props = Map.of("foo", "bar");
 
 		for ( int u = 0; u < userCount; u++ ) {
 			Long userId = CommonDbTestUtils.insertUser(jdbcTemplate);
 			userIds.add(userId);
 			for ( int i = 0; i < integrationCount; i++ ) {
-				Long integrationId = createIntegration(userId, singletonMap("bim", "bam")).getConfigId();
+				Long integrationId = createIntegration(userId, Map.of("bim", "bam")).getConfigId();
 				for ( int ctrl = 0; ctrl < count; ctrl++ ) {
 					// @formatter:off
 					CloudControlConfiguration conf = newCloudControlConfiguration(userId,
@@ -274,13 +272,13 @@ public class JdbcCloudControlConfigurationDaoTests extends AbstractJUnit5JdbcDao
 		final List<Long> userIds = new ArrayList<>(userCount);
 		final List<CloudControlConfiguration> confs = new ArrayList<>(count);
 
-		final Map<String, Object> props = Collections.singletonMap("foo", "bar");
+		final Map<String, Object> props = Map.of("foo", "bar");
 
 		for ( int u = 0; u < userCount; u++ ) {
 			Long userId = CommonDbTestUtils.insertUser(jdbcTemplate);
 			userIds.add(userId);
 			for ( int i = 0; i < integrationCount; i++ ) {
-				Long integrationId = createIntegration(userId, singletonMap("bim", "bam")).getConfigId();
+				Long integrationId = createIntegration(userId, Map.of("bim", "bam")).getConfigId();
 				for ( int ctrl = 0; ctrl < count; ctrl++ ) {
 					// @formatter:off
 					CloudControlConfiguration conf = newCloudControlConfiguration(
@@ -323,13 +321,13 @@ public class JdbcCloudControlConfigurationDaoTests extends AbstractJUnit5JdbcDao
 		final List<Long> userIds = new ArrayList<>(userCount);
 		final List<CloudControlConfiguration> confs = new ArrayList<>(count);
 
-		final Map<String, Object> props = Collections.singletonMap("foo", "bar");
+		final Map<String, Object> props = Map.of("foo", "bar");
 
 		for ( int u = 0; u < userCount; u++ ) {
 			Long userId = CommonDbTestUtils.insertUser(jdbcTemplate);
 			userIds.add(userId);
 			for ( int i = 0; i < integrationCount; i++ ) {
-				Long integrationId = createIntegration(userId, singletonMap("bim", "bam")).getConfigId();
+				Long integrationId = createIntegration(userId, Map.of("bim", "bam")).getConfigId();
 				for ( int ctrl = 0; ctrl < count; ctrl++ ) {
 					// @formatter:off
 					CloudControlConfiguration conf = newCloudControlConfiguration(
