@@ -26,8 +26,9 @@ import static net.solarnetwork.central.common.dao.jdbc.sql.CommonJdbcUtils.execu
 import static net.solarnetwork.util.ObjectUtils.requireNonNullArgument;
 import java.io.IOException;
 import java.sql.ResultSet;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import org.jspecify.annotations.Nullable;
 import org.springframework.jdbc.core.JdbcOperations;
 import org.springframework.jdbc.core.PreparedStatementCallback;
 import org.springframework.jdbc.core.PreparedStatementCreator;
@@ -60,7 +61,7 @@ public class JdbcUserEventDao implements UserEventDao, UserEventMaintenanceDao {
 	 * @param jdbcOps
 	 *        the JDBC operations
 	 * @throws IllegalArgumentException
-	 *         if any argument is {@literal null}
+	 *         if any argument is {@code null}
 	 */
 	public JdbcUserEventDao(JdbcOperations jdbcOps) {
 		super();
@@ -75,7 +76,7 @@ public class JdbcUserEventDao implements UserEventDao, UserEventMaintenanceDao {
 
 	@Override
 	public FilterResults<UserEvent, UserUuidPK> findFiltered(UserEventFilter filter,
-			List<SortDescriptor> sorts, Long offset, Integer max) {
+			@Nullable List<SortDescriptor> sorts, @Nullable Long offset, @Nullable Integer max) {
 		SelectUserEvent sql = new SelectUserEvent(filter);
 		return executeFilterQuery(jdbcOps, filter, sql, UserEventRowMapper.INSTANCE);
 	}
@@ -86,6 +87,7 @@ public class JdbcUserEventDao implements UserEventDao, UserEventMaintenanceDao {
 		return jdbcOps.update(sql);
 	}
 
+	@SuppressWarnings("NullAway") // until NullAway supports <? extends @Nullable Object>
 	@Override
 	public void findFilteredStream(UserEventFilter filter, FilteredResultsProcessor<UserEvent> processor)
 			throws IOException {
@@ -93,7 +95,7 @@ public class JdbcUserEventDao implements UserEventDao, UserEventMaintenanceDao {
 		requireNonNullArgument(processor, "processor");
 		final PreparedStatementCreator sql = new SelectUserEvent(filter);
 		final RowMapper<UserEvent> mapper = UserEventRowMapper.INSTANCE;
-		processor.start(null, null, null, Collections.emptyMap()); // TODO: support count total results/offset/max
+		processor.start(null, null, null, Map.of()); // TODO: support count total results/offset/max
 		try {
 			jdbcOps.execute(sql, (PreparedStatementCallback<Void>) ps -> {
 				try (ResultSet rs = ps.executeQuery()) {
