@@ -33,7 +33,6 @@ import java.sql.Timestamp;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import org.junit.jupiter.api.BeforeEach;
@@ -85,7 +84,7 @@ public class JdbcTransformConfigurationDaoTests extends AbstractJUnit5JdbcDaoTes
 	@Test
 	public void insert() {
 		// GIVEN
-		Map<String, Object> props = Collections.singletonMap("foo", "bar");
+		Map<String, Object> props = Map.of("foo", "bar");
 		TransformConfiguration conf = newTransformConfiguration(userId, randomString(), randomString(),
 				props);
 
@@ -153,7 +152,7 @@ public class JdbcTransformConfigurationDaoTests extends AbstractJUnit5JdbcDaoTes
 		conf.setName(randomString());
 		conf.setServiceIdentifier(randomString());
 
-		Map<String, Object> props = Collections.singletonMap("bar", "foo");
+		Map<String, Object> props = Map.of("bar", "foo");
 		conf.setServiceProps(props);
 
 		UserLongCompositePK result = dao.save(conf);
@@ -191,7 +190,7 @@ public class JdbcTransformConfigurationDaoTests extends AbstractJUnit5JdbcDaoTes
 		final List<Long> userIds = new ArrayList<>(userCount);
 		final List<TransformConfiguration> confs = new ArrayList<>(count);
 
-		final Map<String, Object> props = Collections.singletonMap("foo", "bar");
+		final Map<String, Object> props = Map.of("foo", "bar");
 
 		for ( int i = 0; i < count; i++ ) {
 			for ( int u = 0; u < userCount; u++ ) {
@@ -229,7 +228,7 @@ public class JdbcTransformConfigurationDaoTests extends AbstractJUnit5JdbcDaoTes
 		final List<Long> userIds = new ArrayList<>(userCount);
 		final List<TransformConfiguration> confs = new ArrayList<>(count);
 
-		final Map<String, Object> props = Collections.singletonMap("foo", "bar");
+		final Map<String, Object> props = Map.of("foo", "bar");
 
 		for ( int i = 0; i < count; i++ ) {
 			for ( int u = 0; u < userCount; u++ ) {
