@@ -26,7 +26,6 @@ import static net.solarnetwork.util.ObjectUtils.requireNonNullArgument;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -78,7 +77,7 @@ public abstract class BaseDatumImportBiz implements DatumImportBiz {
 
 	@Override
 	public Iterable<DatumImportInputFormatService> availableInputFormatServices() {
-		return (inputServices != null ? inputServices : Collections.emptyList());
+		return (inputServices != null ? inputServices : List.of());
 	}
 
 	/**
@@ -131,7 +130,7 @@ public abstract class BaseDatumImportBiz implements DatumImportBiz {
 	 *        the collection of services to search in
 	 * @param config
 	 *        the service configuration to find a matching service for
-	 * @return the found service, or {@literal null} if not found
+	 * @return the found service, or {@code null} if not found
 	 */
 	protected <T extends Identity<String>> T optionalService(List<T> collection,
 			IdentifiableConfiguration config) {
@@ -189,7 +188,7 @@ public abstract class BaseDatumImportBiz implements DatumImportBiz {
 	 * @param workDirectory
 	 *        the directory to use
 	 * @throws IllegalArgumentException
-	 *         if {@code workDirectory} is {@literal null}
+	 *         if {@code workDirectory} is {@code null}
 	 */
 	public void setWorkDirectory(File workDirectory) {
 		this.workDirectory = requireNonNullArgument(workDirectory, "workDirectory");
@@ -212,7 +211,7 @@ public abstract class BaseDatumImportBiz implements DatumImportBiz {
 	 *        the path of the directory to set, or an empty string to use a
 	 *        default work directory
 	 * @throws IllegalArgumentException
-	 *         if {@code path} is {@literal null}
+	 *         if {@code path} is {@code null}
 	 */
 	public void setWorkPath(String path) {
 		if ( path == null ) {
