@@ -22,6 +22,7 @@
 
 package net.solarnetwork.central.datum.v2.dao.jdbc.test;
 
+import static java.time.Instant.now;
 import static net.solarnetwork.central.datum.v2.dao.AuditDatumEntity.ioAuditDatum;
 import static net.solarnetwork.central.datum.v2.dao.jdbc.DatumDbUtils.ingestDatumAuxiliary;
 import static net.solarnetwork.central.datum.v2.dao.jdbc.DatumDbUtils.ingestDatumStream;
@@ -44,18 +45,18 @@ import java.time.Instant;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
 import java.time.temporal.ChronoUnit;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import org.junit.jupiter.api.Test;
-
 import net.solarnetwork.central.datum.dao.jdbc.test.BaseDatumJdbcTestSupport;
 import net.solarnetwork.central.datum.domain.DatumAuxiliaryType;
 import net.solarnetwork.central.datum.domain.GeneralNodeDatum;
 import net.solarnetwork.central.datum.domain.GeneralNodeDatumAuxiliary;
+import net.solarnetwork.central.datum.domain.GeneralNodeDatumPK;
 import net.solarnetwork.central.datum.domain.NodeSourcePK;
 import net.solarnetwork.central.datum.v2.dao.AuditDatumEntity;
 import net.solarnetwork.central.datum.v2.dao.DatumAuxiliaryEntity;
@@ -109,7 +110,7 @@ public class DbDatumIngestSideEffectTests extends BaseDatumJdbcTestSupport {
 
 		ZonedDateTime hour = ZonedDateTime.of(2020, 6, 1, 12, 0, 0, 0, ZoneOffset.UTC);
 		assertStaleAggregateDatum("First datum", staleRows.get(0), new StaleAggregateDatumEntity(
-				meta.getStreamId(), hour.toInstant(), Aggregation.Hour, null));
+				meta.getStreamId(), hour.toInstant(), Aggregation.Hour, now()));
 
 		List<AuditDatum> auditHourly = listAuditDatum(jdbcTemplate, Aggregation.Hour);
 		assertThat("1 hourly audit record created for lone datm", auditHourly, hasSize(1));
@@ -131,7 +132,7 @@ public class DbDatumIngestSideEffectTests extends BaseDatumJdbcTestSupport {
 
 		ZonedDateTime hour = ZonedDateTime.of(2020, 6, 1, 12, 0, 0, 0, ZoneOffset.UTC);
 		assertStaleAggregateDatum("First datum", staleRows.get(0), new StaleAggregateDatumEntity(
-				meta.getStreamId(), hour.toInstant(), Aggregation.Hour, null));
+				meta.getStreamId(), hour.toInstant(), Aggregation.Hour, now()));
 
 		List<AuditDatum> auditHourly = listAuditDatum(jdbcTemplate, Aggregation.Hour);
 		assertThat("1 hourly audit record created for lone datm", auditHourly, hasSize(1));
@@ -154,7 +155,7 @@ public class DbDatumIngestSideEffectTests extends BaseDatumJdbcTestSupport {
 		ZonedDateTime hour = ZonedDateTime.of(2020, 6, 1, 12, 0, 0, 0, ZoneOffset.UTC);
 		assertStaleAggregateDatum("Two datum in same hour", staleRows.get(0),
 				new StaleAggregateDatumEntity(meta.getStreamId(), hour.toInstant(), Aggregation.Hour,
-						null));
+						now()));
 
 		List<AuditDatum> auditHourly = listAuditDatum(jdbcTemplate, Aggregation.Hour);
 		assertThat("1 hourly audit record created for two datum in same hour", auditHourly, hasSize(1));
@@ -176,7 +177,7 @@ public class DbDatumIngestSideEffectTests extends BaseDatumJdbcTestSupport {
 		List<StaleAggregateDatum> staleRows = listStaleAggregateDatum(jdbcTemplate);
 		assertThat("One stale aggregate record created for lone datm", staleRows, hasSize(1));
 		assertStaleAggregateDatum("One datum in hour", staleRows.get(0), new StaleAggregateDatumEntity(
-				meta.getStreamId(), hour.toInstant(), Aggregation.Hour, null));
+				meta.getStreamId(), hour.toInstant(), Aggregation.Hour, now()));
 
 		List<AuditDatum> auditHourly = listAuditDatum(jdbcTemplate, Aggregation.Hour);
 		assertThat("1 hourly audit record created for one datum", auditHourly, hasSize(1));
@@ -187,13 +188,13 @@ public class DbDatumIngestSideEffectTests extends BaseDatumJdbcTestSupport {
 		// re-store the same datum, but with one new property added
 		GeneralNodeDatum updated = datums.get(0);
 		updated.getSamples().putAccumulatingSampleValue("just.one.more.after.dinner.mint", 1);
-		ingestDatumStream(log, jdbcTemplate, Collections.singleton(updated), "UTC");
+		ingestDatumStream(log, jdbcTemplate, Set.of(updated), "UTC");
 
 		// THEN
 		assertThat("One stale aggregate record created for re-ingested datum", staleRows, hasSize(1));
 		assertStaleAggregateDatum("Same datum ingested twice produces same salt agg record",
 				staleRows.get(0), new StaleAggregateDatumEntity(meta.getStreamId(), hour.toInstant(),
-						Aggregation.Hour, null));
+						Aggregation.Hour, now()));
 
 		auditHourly = listAuditDatum(jdbcTemplate, Aggregation.Hour);
 		assertThat("Same datum ingested twice updates audit IO data", auditHourly, hasSize(1));
@@ -218,10 +219,10 @@ public class DbDatumIngestSideEffectTests extends BaseDatumJdbcTestSupport {
 		ZonedDateTime hour1 = ZonedDateTime.of(2020, 6, 1, 11, 0, 0, 0, ZoneOffset.UTC);
 		assertStaleAggregateDatum("First datum in first hour", staleRows.get(0),
 				new StaleAggregateDatumEntity(meta.getStreamId(), hour1.toInstant(), Aggregation.Hour,
-						null));
+						now()));
 		assertStaleAggregateDatum("Second datum in second hour", staleRows.get(1),
 				new StaleAggregateDatumEntity(meta.getStreamId(), hour1.plusHours(1).toInstant(),
-						Aggregation.Hour, null));
+						Aggregation.Hour, now()));
 
 		List<AuditDatum> auditHourly = listAuditDatum(jdbcTemplate, Aggregation.Hour);
 		assertThat("1 hourly audit record created for two datum", auditHourly, hasSize(1));
@@ -245,13 +246,13 @@ public class DbDatumIngestSideEffectTests extends BaseDatumJdbcTestSupport {
 		ZonedDateTime hour1 = ZonedDateTime.of(2020, 6, 1, 11, 0, 0, 0, ZoneOffset.UTC);
 		assertStaleAggregateDatum("First datum in first hour", staleRows.get(0),
 				new StaleAggregateDatumEntity(meta.getStreamId(), hour1.toInstant(), Aggregation.Hour,
-						null));
+						now()));
 		assertStaleAggregateDatum("Middle datum in second hour", staleRows.get(1),
 				new StaleAggregateDatumEntity(meta.getStreamId(), hour1.plusHours(1).toInstant(),
-						Aggregation.Hour, null));
+						Aggregation.Hour, now()));
 		assertStaleAggregateDatum("Last datum in third hour", staleRows.get(2),
 				new StaleAggregateDatumEntity(meta.getStreamId(), hour1.plusHours(2).toInstant(),
-						Aggregation.Hour, null));
+						Aggregation.Hour, now()));
 
 		List<AuditDatum> auditHourly = listAuditDatum(jdbcTemplate, Aggregation.Hour);
 		assertThat("One hourly audit record created for all datum", auditHourly, hasSize(1));
@@ -279,9 +280,9 @@ public class DbDatumIngestSideEffectTests extends BaseDatumJdbcTestSupport {
 		ZonedDateTime hour1 = ZonedDateTime.of(2020, 6, 1, 11, 0, 0, 0, ZoneOffset.UTC);
 		assertStaleAggregateDatum("Reset in hour before", staleRows.get(0),
 				new StaleAggregateDatumEntity(meta.getStreamId(), hour1.toInstant(), Aggregation.Hour,
-						null));
+						now()));
 		assertStaleAggregateDatum("Reset in hour", staleRows.get(1), new StaleAggregateDatumEntity(
-				meta.getStreamId(), hour1.plusHours(1).toInstant(), Aggregation.Hour, null));
+				meta.getStreamId(), hour1.plusHours(1).toInstant(), Aggregation.Hour, now()));
 	}
 
 	@Test
@@ -303,7 +304,7 @@ public class DbDatumIngestSideEffectTests extends BaseDatumJdbcTestSupport {
 
 		ZonedDateTime hour = ZonedDateTime.of(2020, 6, 1, 12, 0, 0, 0, ZoneOffset.UTC);
 		assertStaleAggregateDatum("Reset in hour", staleRows.get(0), new StaleAggregateDatumEntity(
-				meta.getStreamId(), hour.toInstant(), Aggregation.Hour, null));
+				meta.getStreamId(), hour.toInstant(), Aggregation.Hour, now()));
 	}
 
 	@Test
@@ -325,9 +326,9 @@ public class DbDatumIngestSideEffectTests extends BaseDatumJdbcTestSupport {
 
 		ZonedDateTime hour1 = ZonedDateTime.of(2020, 6, 1, 12, 0, 0, 0, ZoneOffset.UTC);
 		assertStaleAggregateDatum("Reset in hour", staleRows.get(0), new StaleAggregateDatumEntity(
-				meta.getStreamId(), hour1.toInstant(), Aggregation.Hour, null));
+				meta.getStreamId(), hour1.toInstant(), Aggregation.Hour, now()));
 		assertStaleAggregateDatum("Reset in hour after", staleRows.get(1), new StaleAggregateDatumEntity(
-				meta.getStreamId(), hour1.plusHours(1).toInstant(), Aggregation.Hour, null));
+				meta.getStreamId(), hour1.plusHours(1).toInstant(), Aggregation.Hour, now()));
 	}
 
 	@Test
@@ -354,7 +355,7 @@ public class DbDatumIngestSideEffectTests extends BaseDatumJdbcTestSupport {
 		DatumAuxiliaryPK from = new DatumAuxiliaryPK(meta.getStreamId(), fromAux.getCreated(),
 				DatumAuxiliaryType.Reset);
 		DatumAuxiliary to = new DatumAuxiliaryEntity(from.getStreamId(),
-				from.getTimestamp().plusSeconds(60), from.getKind(), null, f, s, fromAux.getNotes(),
+				from.getTimestamp().plusSeconds(60), from.getKind(), now(), f, s, fromAux.getNotes(),
 				fromAux.getMeta());
 
 		boolean moved = moveDatumAuxiliary(log, jdbcTemplate, from, to);
@@ -365,7 +366,7 @@ public class DbDatumIngestSideEffectTests extends BaseDatumJdbcTestSupport {
 
 		ZonedDateTime hour = ZonedDateTime.of(2020, 6, 1, 12, 0, 0, 0, ZoneOffset.UTC);
 		assertStaleAggregateDatum("Reset in hour", staleRows.get(0), new StaleAggregateDatumEntity(
-				meta.getStreamId(), hour.toInstant(), Aggregation.Hour, null));
+				meta.getStreamId(), hour.toInstant(), Aggregation.Hour, now()));
 	}
 
 	@Test
@@ -379,9 +380,7 @@ public class DbDatumIngestSideEffectTests extends BaseDatumJdbcTestSupport {
 		insertDatumAuxiliary(log, jdbcTemplate, meta.getStreamId(), auxDatums);
 
 		List<GeneralNodeDatum> datums2 = datums.stream().map(e -> {
-			GeneralNodeDatum clone = e.clone();
-			clone.setNodeId(2L);
-			return clone;
+			return e.copyWithId(new GeneralNodeDatumPK(2L, e.getCreated(), e.getSourceId()));
 		}).collect(Collectors.toList());
 		Map<NodeSourcePK, ObjectDatumStreamMetadata> metas2 = insertDatumStream(log, jdbcTemplate,
 				datums2, "UTC");
@@ -396,7 +395,7 @@ public class DbDatumIngestSideEffectTests extends BaseDatumJdbcTestSupport {
 		DatumAuxiliaryPK from = new DatumAuxiliaryPK(meta.getStreamId(), fromAux.getCreated(),
 				DatumAuxiliaryType.Reset);
 		DatumAuxiliary to = new DatumAuxiliaryEntity(meta2.getStreamId(), from.getTimestamp(),
-				from.getKind(), null, fromAux.getSamplesFinal(), fromAux.getSamplesStart(),
+				from.getKind(), now(), fromAux.getSamplesFinal(), fromAux.getSamplesStart(),
 				fromAux.getNotes(), fromAux.getMeta());
 
 		boolean moved = moveDatumAuxiliary(log, jdbcTemplate, from, to);
@@ -414,10 +413,10 @@ public class DbDatumIngestSideEffectTests extends BaseDatumJdbcTestSupport {
 		ZonedDateTime hour = ZonedDateTime.of(2020, 6, 1, 12, 0, 0, 0, ZoneOffset.UTC);
 		assertStaleAggregateDatum("Reset in hour node 1", streamToStale.get(meta.getStreamId()),
 				new StaleAggregateDatumEntity(meta.getStreamId(), hour.toInstant(), Aggregation.Hour,
-						null));
+						now()));
 		assertStaleAggregateDatum("Reset in hour node 2", streamToStale.get(meta2.getStreamId()),
 				new StaleAggregateDatumEntity(meta2.getStreamId(), hour.toInstant(), Aggregation.Hour,
-						null));
+						now()));
 	}
 
 	@Test
