@@ -28,7 +28,6 @@ import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.time.Duration;
-import java.util.Collections;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
@@ -408,7 +407,7 @@ public class XsltRequestTransformServiceTests {
 				XsltRequestTransformService.SETTING_XSLT_CACHE_DURATION, 600L));
 
 		// WHEN
-		var params = Collections.singletonMap(TransformConstants.PARAM_CONFIGURATION_CACHE_KEY, "a");
+		var params = Map.of(TransformConstants.PARAM_CONFIGURATION_CACHE_KEY, "a");
 		Iterable<NodeInstruction> results = service.transformInput(xmlInput, TransformConstants.XML_TYPE,
 				conf, params);
 		Iterable<NodeInstruction> results2 = service.transformInput(xmlInput2,
