@@ -24,8 +24,6 @@ package net.solarnetwork.central.user.billing.snf;
 
 import static java.lang.String.format;
 import static java.time.ZoneOffset.UTC;
-import static net.solarnetwork.central.user.billing.snf.SnfBillingUtils.invoiceForSnfInvoice;
-import static net.solarnetwork.central.user.billing.snf.SnfBillingUtils.usageMetadata;
 import static net.solarnetwork.central.user.billing.snf.domain.InvoiceItemType.Usage;
 import static net.solarnetwork.central.user.billing.snf.domain.NodeUsages.CLOUD_INTEGRATIONS_DATA_KEY;
 import static net.solarnetwork.central.user.billing.snf.domain.NodeUsages.DATUM_DAYS_STORED_KEY;
@@ -41,6 +39,9 @@ import static net.solarnetwork.central.user.billing.snf.domain.NodeUsages.OSCP_C
 import static net.solarnetwork.central.user.billing.snf.domain.NodeUsages.OSCP_CAPACITY_KEY;
 import static net.solarnetwork.central.user.billing.snf.domain.SnfInvoiceItem.META_AVAILABLE_CREDIT;
 import static net.solarnetwork.central.user.billing.snf.domain.SnfInvoiceItem.newItem;
+import static net.solarnetwork.central.user.billing.snf.util.SnfBillingUtils.invoiceForSnfInvoice;
+import static net.solarnetwork.central.user.billing.snf.util.SnfBillingUtils.usageMetadata;
+import static net.solarnetwork.util.ObjectUtils.nonnull;
 import static net.solarnetwork.util.ObjectUtils.requireNonNullArgument;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
@@ -60,10 +61,12 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Properties;
+import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import javax.cache.Cache;
+import org.jspecify.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.context.MessageSource;
@@ -102,6 +105,7 @@ import net.solarnetwork.central.user.billing.snf.domain.UsageInfo;
 import net.solarnetwork.central.user.billing.snf.util.SnfBillingUtils;
 import net.solarnetwork.central.user.billing.support.LocalizedInvoice;
 import net.solarnetwork.central.user.domain.UserLongPK;
+import net.solarnetwork.dao.FilterResults;
 import net.solarnetwork.domain.Result;
 import net.solarnetwork.service.TemplateRenderer;
 
@@ -126,7 +130,8 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	public static final Long DRAFT_INVOICE_ID = Long.valueOf(Invoice.DRAFT_INVOICE_ID);
 
 	/** The invoice number used for dry-run (draft) invoice generation. */
-	public static final String DRAFT_INVOICE_NUMBER = SnfBillingUtils.invoiceNumForId(DRAFT_INVOICE_ID);
+	public static final String DRAFT_INVOICE_NUMBER = nonnull(
+			SnfBillingUtils.invoiceNumForId(DRAFT_INVOICE_ID), "Draft invoice number");
 
 	private static final String[] MESSAGE_BUNDLE_NAMES = new String[] { GLOBAL_MESSAGE_BUNDLE_NAME,
 			MESSAGE_BUNDLE_NAME };
@@ -140,10 +145,10 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	private final NodeUsageDao usageDao;
 	private final TaxCodeDao taxCodeDao;
 	private final VersionedMessageDao messageDao;
-	private SnfTaxCodeResolver taxCodeResolver;
-	private List<SnfInvoiceDeliverer> deliveryServices;
-	private List<SnfInvoiceRendererResolver> rendererResolvers;
-	private Cache<String, VersionedMessages> messageCache;
+	private @Nullable SnfTaxCodeResolver taxCodeResolver;
+	private @Nullable List<SnfInvoiceDeliverer> deliveryServices;
+	private @Nullable List<SnfInvoiceRendererResolver> rendererResolvers;
+	private @Nullable Cache<String, VersionedMessages> messageCache;
 	private String datumPropertiesInKey = DATUM_PROPS_IN_KEY;
 	private String datumOutKey = DATUM_OUT_KEY;
 	private String datumDaysStoredKey = DATUM_DAYS_STORED_KEY;
@@ -177,7 +182,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 * @param messageDao
 	 *        the message DAO
 	 * @throws IllegalArgumentException
-	 *         if any argument is {@literal null}
+	 *         if any argument is {@code null}
 	 */
 	public DefaultSnfInvoicingSystem(AccountDao accountDao, SnfInvoiceDao invoiceDao,
 			SnfInvoiceItemDao invoiceItemDao, SnfInvoiceNodeUsageDao invoiceNodeUsageDao,
@@ -194,14 +199,15 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 
 	@Transactional(readOnly = true, propagation = Propagation.SUPPORTS)
 	@Override
-	public Account accountForUser(Long userId) {
+	public @Nullable Account accountForUser(Long userId) {
 		return accountDao.getForUser(userId);
 	}
 
 	@Transactional(readOnly = true, propagation = Propagation.SUPPORTS)
 	@Override
-	public SnfInvoice findLatestInvoiceForAccount(UserLongPK accountId) {
-		SnfInvoiceFilter filter = SnfInvoiceFilter.forAccount(accountId.getId());
+	public @Nullable SnfInvoice findLatestInvoiceForAccount(UserLongPK accountId) {
+		SnfInvoiceFilter filter = SnfInvoiceFilter
+				.forAccount(requireNonNullArgument(accountId.getId(), "accountId.id"));
 		filter.setIgnoreCreditOnly(true);
 		net.solarnetwork.dao.FilterResults<SnfInvoice, UserLongPK> results = invoiceDao
 				.findFiltered(filter, SnfInvoiceDao.SORT_BY_INVOICE_DATE_DESCENDING, 0L, 1);
@@ -211,13 +217,14 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 
 	@Transactional(propagation = Propagation.REQUIRED)
 	@Override
-	public SnfInvoice generateInvoice(Long userId, LocalDate startDate, LocalDate endDate,
+	public @Nullable SnfInvoice generateInvoice(Long userId, LocalDate startDate, LocalDate endDate,
 			SnfInvoicingSystem.InvoiceGenerationOptions options) {
 		// get account
-		Account account = accountDao.getForUser(userId, endDate);
+		final Account account = accountDao.getForUser(userId, endDate);
 		if ( account == null ) {
 			throw new AuthorizationException(Reason.UNKNOWN_OBJECT, userId);
 		}
+		final Long accountId = account.getAccountId();
 
 		final boolean dryRun = (options != null && options.isDryRun());
 		final boolean useCredit = (options != null ? options.isUseAccountCredit() : !dryRun);
@@ -237,19 +244,18 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 		}
 
 		// turn usage into invoice items
-		final SnfInvoice invoice = new SnfInvoice(account.getId().getId(), userId, Instant.now());
+		final SnfInvoice invoice = new SnfInvoice(accountId, userId, Instant.now(), startDate, endDate,
+				account.getCurrencyCode());
 		invoice.setAddress(account.getAddress());
-		invoice.setCurrencyCode(account.getCurrencyCode());
-		invoice.setStartDate(startDate);
-		invoice.setEndDate(endDate);
 
 		// query for node usage counts
 		final List<NodeUsage> nodeUsages = usageDao.findNodeUsageForAccount(userId, startDate, endDate);
 
 		// for dryRun support, we generate a negative invoice ID
-		final UserLongPK invoiceId = (dryRun ? new UserLongPK(userId, DRAFT_INVOICE_ID)
+		final UserLongPK invoicePk = (dryRun ? new UserLongPK(userId, DRAFT_INVOICE_ID)
 				: invoiceDao.save(invoice));
-		invoice.getId().setId(invoiceId.getId()); // for return
+		final Long invoiceId = nonnull(invoicePk.getId(), "Invoice ID");
+		invoice.setInvoiceId(invoiceId); // for return
 
 		List<SnfInvoiceItem> items = new ArrayList<>(usages.size());
 
@@ -262,7 +268,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 			final Map<String, List<NamedCost>> tiersBreakdown = usage.getTiersCostBreakdown();
 			final Map<String, UsageInfo> usageInfo = usage.getUsageInfo();
 			if ( usage.getDatumPropertiesIn().compareTo(BigInteger.ZERO) > 0 ) {
-				SnfInvoiceItem item = newItem(invoiceId.getId(), Usage, datumPropertiesInKey,
+				SnfInvoiceItem item = newItem(invoiceId, Usage, datumPropertiesInKey,
 						new BigDecimal(usage.getDatumPropertiesIn()), usage.getDatumPropertiesInCost());
 				item.setMetadata(usageMetadata(usageInfo, tiersBreakdown, DATUM_PROPS_IN_KEY));
 				if ( !dryRun ) {
@@ -271,7 +277,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 				items.add(item);
 			}
 			if ( usage.getDatumOut().compareTo(BigInteger.ZERO) > 0 ) {
-				SnfInvoiceItem item = newItem(invoiceId.getId(), Usage, datumOutKey,
+				SnfInvoiceItem item = newItem(invoiceId, Usage, datumOutKey,
 						new BigDecimal(usage.getDatumOut()), usage.getDatumOutCost());
 				item.setMetadata(usageMetadata(usageInfo, tiersBreakdown, DATUM_OUT_KEY));
 				if ( !dryRun ) {
@@ -280,7 +286,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 				items.add(item);
 			}
 			if ( usage.getDatumDaysStored().compareTo(BigInteger.ZERO) > 0 ) {
-				SnfInvoiceItem item = newItem(invoiceId.getId(), Usage, datumDaysStoredKey,
+				SnfInvoiceItem item = newItem(invoiceId, Usage, datumDaysStoredKey,
 						new BigDecimal(usage.getDatumDaysStored()), usage.getDatumDaysStoredCost());
 				item.setMetadata(usageMetadata(usageInfo, tiersBreakdown, DATUM_DAYS_STORED_KEY));
 				if ( !dryRun ) {
@@ -289,7 +295,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 				items.add(item);
 			}
 			if ( usage.getInstructionsIssued().compareTo(BigInteger.ZERO) > 0 ) {
-				SnfInvoiceItem item = newItem(invoiceId.getId(), Usage, instructionsIssuedKey,
+				SnfInvoiceItem item = newItem(invoiceId, Usage, instructionsIssuedKey,
 						new BigDecimal(usage.getInstructionsIssued()),
 						usage.getInstructionsIssuedCost());
 				item.setMetadata(usageMetadata(usageInfo, tiersBreakdown, INSTRUCTIONS_ISSUED_KEY));
@@ -299,7 +305,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 				items.add(item);
 			}
 			if ( usage.getFluxDataIn().compareTo(BigInteger.ZERO) > 0 ) {
-				SnfInvoiceItem item = newItem(invoiceId.getId(), Usage, fluxDataInKey,
+				SnfInvoiceItem item = newItem(invoiceId, Usage, fluxDataInKey,
 						new BigDecimal(usage.getFluxDataIn()), usage.getFluxDataInCost());
 				item.setMetadata(usageMetadata(usageInfo, tiersBreakdown, FLUX_DATA_IN_KEY));
 				if ( !dryRun ) {
@@ -308,7 +314,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 				items.add(item);
 			}
 			if ( usage.getFluxDataOut().compareTo(BigInteger.ZERO) > 0 ) {
-				SnfInvoiceItem item = newItem(invoiceId.getId(), Usage, fluxDataOutKey,
+				SnfInvoiceItem item = newItem(invoiceId, Usage, fluxDataOutKey,
 						new BigDecimal(usage.getFluxDataOut()), usage.getFluxDataOutCost());
 				item.setMetadata(usageMetadata(usageInfo, tiersBreakdown, FLUX_DATA_OUT_KEY));
 				if ( !dryRun ) {
@@ -317,7 +323,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 				items.add(item);
 			}
 			if ( usage.getOcppChargers().compareTo(BigInteger.ZERO) > 0 ) {
-				SnfInvoiceItem item = newItem(invoiceId.getId(), Usage, ocppChargersKey,
+				SnfInvoiceItem item = newItem(invoiceId, Usage, ocppChargersKey,
 						new BigDecimal(usage.getOcppChargers()), usage.getOcppChargersCost());
 				item.setMetadata(usageMetadata(usageInfo, tiersBreakdown, OCPP_CHARGERS_KEY));
 				if ( !dryRun ) {
@@ -326,7 +332,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 				items.add(item);
 			}
 			if ( usage.getOscpCapacityGroups().compareTo(BigInteger.ZERO) > 0 ) {
-				SnfInvoiceItem item = newItem(invoiceId.getId(), Usage, oscpCapacityGroupsKey,
+				SnfInvoiceItem item = newItem(invoiceId, Usage, oscpCapacityGroupsKey,
 						new BigDecimal(usage.getOscpCapacityGroups()),
 						usage.getOscpCapacityGroupsCost());
 				item.setMetadata(usageMetadata(usageInfo, tiersBreakdown, OSCP_CAPACITY_GROUPS_KEY));
@@ -336,7 +342,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 				items.add(item);
 			}
 			if ( usage.getOscpCapacity().compareTo(BigInteger.ZERO) > 0 ) {
-				SnfInvoiceItem item = newItem(invoiceId.getId(), Usage, oscpCapacityKey,
+				SnfInvoiceItem item = newItem(invoiceId, Usage, oscpCapacityKey,
 						new BigDecimal(usage.getOscpCapacity()), usage.getOscpCapacityCost());
 				item.setMetadata(usageMetadata(usageInfo, tiersBreakdown, OSCP_CAPACITY_KEY));
 				if ( !dryRun ) {
@@ -345,7 +351,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 				items.add(item);
 			}
 			if ( usage.getDnp3DataPoints().compareTo(BigInteger.ZERO) > 0 ) {
-				SnfInvoiceItem item = newItem(invoiceId.getId(), Usage, dnp3DataPointsKey,
+				SnfInvoiceItem item = newItem(invoiceId, Usage, dnp3DataPointsKey,
 						new BigDecimal(usage.getDnp3DataPoints()), usage.getDnp3DataPointsCost());
 				item.setMetadata(usageMetadata(usageInfo, tiersBreakdown, DNP3_DATA_POINTS_KEY));
 				if ( !dryRun ) {
@@ -354,7 +360,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 				items.add(item);
 			}
 			if ( usage.getOauthClientCredentials().compareTo(BigInteger.ZERO) > 0 ) {
-				SnfInvoiceItem item = newItem(invoiceId.getId(), Usage, oauthClientCredentialsKey,
+				SnfInvoiceItem item = newItem(invoiceId, Usage, oauthClientCredentialsKey,
 						new BigDecimal(usage.getOauthClientCredentials()),
 						usage.getOauthClientCredentialsCost());
 				item.setMetadata(usageMetadata(usageInfo, tiersBreakdown, OAUTH_CLIENT_CREDENTIALS_KEY));
@@ -364,7 +370,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 				items.add(item);
 			}
 			if ( usage.getCloudIntegrationsData().compareTo(BigInteger.ZERO) > 0 ) {
-				SnfInvoiceItem item = newItem(invoiceId.getId(), Usage, cloudIntegrationsDataKey,
+				SnfInvoiceItem item = newItem(invoiceId, Usage, cloudIntegrationsDataKey,
 						new BigDecimal(usage.getCloudIntegrationsData()),
 						usage.getCloudIntegrationsDataCost());
 				item.setMetadata(usageMetadata(usageInfo, tiersBreakdown, CLOUD_INTEGRATIONS_DATA_KEY));
@@ -375,6 +381,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 			}
 		}
 
+		// add items to invoice now in case total amount needed for tax/credit calculations below
 		invoice.setItems(new LinkedHashSet<>(items));
 
 		List<SnfInvoiceItem> taxItems = computeInvoiceTaxItems(invoice);
@@ -382,7 +389,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 			if ( !dryRun ) {
 				invoiceItemDao.save(taxItem);
 			}
-			invoice.getItems().add(taxItem);
+			invoice.addItem(taxItem);
 		}
 
 		// claim credit, if available
@@ -393,14 +400,17 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 						invoiceTotal);
 				if ( credit.compareTo(BigDecimal.ZERO) > 0 ) {
 					AccountBalance balance = accountDao.getBalanceForUser(invoice.getUserId());
-					SnfInvoiceItem creditItem = SnfInvoiceItem.newItem(invoice, InvoiceItemType.Credit,
-							accountCreditKey, BigDecimal.ONE, credit.negate());
-					creditItem.setMetadata(Collections.singletonMap(META_AVAILABLE_CREDIT,
-							balance.getAvailableCredit().toPlainString()));
-					if ( !dryRun ) {
-						invoiceItemDao.save(creditItem);
+					if ( balance != null ) {
+						SnfInvoiceItem creditItem = SnfInvoiceItem.newItem(invoice,
+								InvoiceItemType.Credit, accountCreditKey, BigDecimal.ONE,
+								credit.negate());
+						creditItem.setMetadata(Map.of(META_AVAILABLE_CREDIT,
+								balance.getAvailableCredit().toPlainString()));
+						if ( !dryRun ) {
+							invoiceItemDao.save(creditItem);
+						}
+						invoice.addItem(creditItem);
 					}
-					invoice.getItems().add(creditItem);
 				}
 			}
 		}
@@ -410,11 +420,11 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 			Collections.sort(nodeUsages);
 			List<SnfInvoiceNodeUsage> invoiceNodeUsages = new ArrayList<>(nodeUsages.size());
 			for ( NodeUsage nodeUsage : nodeUsages ) {
-				SnfInvoiceNodeUsage u = new SnfInvoiceNodeUsage(invoiceId.getId(), nodeUsage.getId(),
-						invoice.getCreated(), nodeUsage.getDescription(),
-						nodeUsage.getDatumPropertiesIn(), nodeUsage.getDatumOut(),
-						nodeUsage.getDatumDaysStored(), nodeUsage.getInstructionsIssued(),
-						nodeUsage.getFluxDataIn());
+				SnfInvoiceNodeUsage u = new SnfInvoiceNodeUsage(invoiceId,
+						nonnull(nodeUsage.getId(), "NodeUsage node ID"), invoice.getCreated(),
+						nodeUsage.getDescription(), nodeUsage.getDatumPropertiesIn(),
+						nodeUsage.getDatumOut(), nodeUsage.getDatumDaysStored(),
+						nodeUsage.getInstructionsIssued(), nodeUsage.getFluxDataIn());
 				invoiceNodeUsages.add(u);
 				if ( !dryRun ) {
 					invoiceNodeUsageDao.save(u);
@@ -480,7 +490,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 		}
 	}
 
-	private SnfInvoiceDeliverer invoiceDeliverer() {
+	private @Nullable SnfInvoiceDeliverer invoiceDeliverer() {
 		Iterable<SnfInvoiceDeliverer> iterable = getDeliveryServices();
 		Iterator<SnfInvoiceDeliverer> itr = (iterable != null ? iterable.iterator() : null);
 		return (itr != null && itr.hasNext() ? itr.next() : null);
@@ -529,16 +539,16 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 			extension = "." + outputType.getSubtype();
 		}
 		Object[] filenameArgs = new Object[] {
-				DRAFT_INVOICE_ID.equals(invoice.getId().getId())
+				DRAFT_INVOICE_ID.equals(invoice.getInvoiceId())
 						? messageSource.getMessage("draftInvoice", null, "DRAFT", locale)
-						: SnfBillingUtils.invoiceNumForId(invoice.getId().getId()),
+						: SnfBillingUtils.invoiceNumForId(invoice.getInvoiceId()),
 				YearMonth.from(invoice.getStartDate()).toString(), extension };
 		String filename = messageSource.getMessage("invoice.filename", filenameArgs,
 				"SolarNetwork Invoice {0} - {1}{2}", locale);
 		return new ByteArrayResource(data) {
 
 			@Override
-			public String getFilename() {
+			public @Nullable String getFilename() {
 				return filename;
 			}
 
@@ -567,22 +577,22 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 * {@inheritDoc}
 	 */
 	@Override
-	public TaxCodeFilter taxCodeFilterForInvoice(SnfInvoice invoice) {
-		SnfTaxCodeResolver service = this.taxCodeResolver;
+	public TaxCodeFilter taxCodeFilterForInvoice(final SnfInvoice invoice) {
+		final SnfTaxCodeResolver service = this.taxCodeResolver;
 		if ( service != null ) {
 			return service.taxCodeFilterForInvoice(invoice);
 		}
 		if ( invoice == null ) {
 			throw new IllegalArgumentException("The invoice argument must be provided.");
 		}
-		Address addr = invoice.getAddress();
+		final Address addr = invoice.getAddress();
 		if ( addr == null ) {
 			throw new IllegalArgumentException("The invoice must provide an address.");
 		}
 		if ( addr.getCountry() == null || addr.getCountry().trim().isEmpty() ) {
 			throw new IllegalArgumentException("The address must provide a country.");
 		}
-		List<String> zones = new ArrayList<>(2);
+		final List<String> zones = new ArrayList<>(2);
 		zones.add(addr.getCountry());
 		if ( addr.getStateOrProvince() != null && !addr.getStateOrProvince().trim().isEmpty() ) {
 			zones.add(String.format("%s.%s", addr.getCountry(), addr.getStateOrProvince()));
@@ -627,35 +637,37 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 *
 	 * @param invoice
 	 *        the invoice to compute tax items for
-	 * @return the list of tax items, never {@literal null}
+	 * @return the list of tax items, never {@code null}
 	 */
-	public List<SnfInvoiceItem> computeInvoiceTaxItems(SnfInvoice invoice) {
-		SnfTaxCodeResolver taxResolver = (taxCodeResolver != null ? taxCodeResolver : this);
-		TaxCodeFilter taxFilter = taxResolver.taxCodeFilterForInvoice(invoice);
-		List<SnfInvoiceItem> taxItems = new ArrayList<>(8);
+	public List<SnfInvoiceItem> computeInvoiceTaxItems(final SnfInvoice invoice) {
+		final SnfTaxCodeResolver taxResolver = (taxCodeResolver != null ? taxCodeResolver : this);
+		final TaxCodeFilter taxFilter = taxResolver.taxCodeFilterForInvoice(invoice);
+		final List<SnfInvoiceItem> taxItems = new ArrayList<>(8);
 		if ( taxFilter != null ) {
-			net.solarnetwork.dao.FilterResults<TaxCode, Long> taxes = taxCodeDao.findFiltered(taxFilter,
-					null, null, null);
+			FilterResults<TaxCode, Long> taxes = taxCodeDao.findFiltered(taxFilter);
 			if ( taxes != null && taxes.getReturnedResultCount() > 0 ) {
 				Map<String, BigDecimal> taxAmounts = new LinkedHashMap<>(taxes.getReturnedResultCount());
-				for ( SnfInvoiceItem item : invoice.getItems() ) {
-					final InvoiceItemType itemType = item.getItemType();
-					if ( itemType == InvoiceItemType.Tax ) {
-						continue;
-					}
-					final String itemKey = item.getKey();
-					final BigDecimal itemAmount = item.getAmount();
-					if ( itemKey == null || itemAmount == null ) {
-						continue;
-					}
-					for ( TaxCode tax : taxes ) {
-						final String taxCode = tax.getCode();
-						final BigDecimal taxRate = tax.getRate();
-						if ( taxCode == null || taxRate == null ) {
+				final Set<SnfInvoiceItem> items = invoice.getItems();
+				if ( items != null ) {
+					for ( SnfInvoiceItem item : items ) {
+						final InvoiceItemType itemType = item.getItemType();
+						if ( itemType == InvoiceItemType.Tax ) {
 							continue;
 						}
-						if ( itemKey.equalsIgnoreCase(tax.getItemKey()) ) {
-							taxAmounts.merge(taxCode, taxRate.multiply(itemAmount), BigDecimal::add);
+						final String itemKey = item.getKey();
+						final BigDecimal itemAmount = item.getAmount();
+						if ( itemKey == null || itemAmount == null ) {
+							continue;
+						}
+						for ( TaxCode tax : taxes ) {
+							final String taxCode = tax.getCode();
+							final BigDecimal taxRate = tax.getRate();
+							if ( taxCode == null || taxRate == null ) {
+								continue;
+							}
+							if ( itemKey.equalsIgnoreCase(tax.getItemKey()) ) {
+								taxAmounts.merge(taxCode, taxRate.multiply(itemAmount), BigDecimal::add);
+							}
 						}
 					}
 				}
@@ -674,7 +686,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 *
 	 * @return the key; defaults to {@link NodeUsages#DATUM_PROPS_IN_KEY}
 	 */
-	public String getDatumPropertiesInKey() {
+	public final String getDatumPropertiesInKey() {
 		return datumPropertiesInKey;
 	}
 
@@ -684,9 +696,9 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 * @param datumPropertiesInKey
 	 *        the key to set
 	 * @throws IllegalArgumentException
-	 *         if the argument is {@literal null}
+	 *         if the argument is {@code null}
 	 */
-	public void setDatumPropertiesInKey(String datumPropertiesInKey) {
+	public final void setDatumPropertiesInKey(String datumPropertiesInKey) {
 		this.datumPropertiesInKey = requireNonNullArgument(datumPropertiesInKey, "datumPropertiesInKey");
 	}
 
@@ -695,7 +707,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 *
 	 * @return the key; defaults to {@link NodeUsages#DATUM_OUT_KEY}
 	 */
-	public String getDatumOutKey() {
+	public final String getDatumOutKey() {
 		return datumOutKey;
 	}
 
@@ -705,9 +717,9 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 * @param datumOutKey
 	 *        the key to set
 	 * @throws IllegalArgumentException
-	 *         if the argument is {@literal null}
+	 *         if the argument is {@code null}
 	 */
-	public void setDatumOutKey(String datumOutKey) {
+	public final void setDatumOutKey(String datumOutKey) {
 		this.datumOutKey = requireNonNullArgument(datumOutKey, "datumOutKey");
 	}
 
@@ -716,7 +728,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 *
 	 * @return the key; defaults to {@link NodeUsages#DATUM_DAYS_STORED_KEY}
 	 */
-	public String getDatumDaysStoredKey() {
+	public final String getDatumDaysStoredKey() {
 		return datumDaysStoredKey;
 	}
 
@@ -726,9 +738,9 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 * @param datumDaysStoredKey
 	 *        the key to set
 	 * @throws IllegalArgumentException
-	 *         if the argument is {@literal null}
+	 *         if the argument is {@code null}
 	 */
-	public void setDatumDaysStoredKey(String datumDaysStoredKey) {
+	public final void setDatumDaysStoredKey(String datumDaysStoredKey) {
 		this.datumDaysStoredKey = requireNonNullArgument(datumDaysStoredKey, "datumDaysStoredKey");
 	}
 
@@ -738,7 +750,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 * @return the key
 	 * @since 1.3
 	 */
-	public String getInstructionsIssuedKey() {
+	public final String getInstructionsIssuedKey() {
 		return instructionsIssuedKey;
 	}
 
@@ -748,10 +760,10 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 * @param instructionsIssuedKey
 	 *        the key to set
 	 * @throws IllegalArgumentException
-	 *         if the argument is {@literal null}
+	 *         if the argument is {@code null}
 	 * @since 1.3
 	 */
-	public void setInstructionsIssuedKey(String instructionsIssuedKey) {
+	public final void setInstructionsIssuedKey(String instructionsIssuedKey) {
 		this.instructionsIssuedKey = requireNonNullArgument(instructionsIssuedKey,
 				"instructionsIssuedKey");
 	}
@@ -759,7 +771,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	/**
 	 * Get the item key for SolarFlux data in.
 	 *
-	 * @return the key, never {@literal null}; defaults to
+	 * @return the key, never {@code null}; defaults to
 	 *         {@link NodeUsages#FLUX_DATA_IN_KEY}
 	 * @since 1.5
 	 */
@@ -773,7 +785,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 * @param fluxDataInKey
 	 *        the key to set
 	 * @throws IllegalArgumentException
-	 *         if the argument is {@literal null}
+	 *         if the argument is {@code null}
 	 * @since 1.5
 	 */
 	public final void setFluxDataInKey(String fluxDataInKey) {
@@ -783,7 +795,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	/**
 	 * Get the item key for SolarFlux data out.
 	 *
-	 * @return the key, never {@literal null}; defaults to
+	 * @return the key, never {@code null}; defaults to
 	 *         {@link NodeUsages#FLUX_DATA_OUT_KEY}
 	 * @since 1.5
 	 */
@@ -797,7 +809,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 * @param fluxDataOutKey
 	 *        the key to set
 	 * @throws IllegalArgumentException
-	 *         if the argument is {@literal null}
+	 *         if the argument is {@code null}
 	 * @since 1.5
 	 */
 	public final void setFluxDataOutKey(String fluxDataOutKey) {
@@ -807,11 +819,11 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	/**
 	 * Get the item key for OCPP chargers.
 	 *
-	 * @return the key, never {@literal null}; defaults to
+	 * @return the key, never {@code null}; defaults to
 	 *         {@link NodeUsages#OCPP_CHARGERS_KEY}
 	 * @since 1.1
 	 */
-	public String getOcppChargersKey() {
+	public final String getOcppChargersKey() {
 		return ocppChargersKey;
 	}
 
@@ -821,21 +833,21 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 * @param ocppChargersKey
 	 *        the key to set
 	 * @throws IllegalArgumentException
-	 *         if the argument is {@literal null}
+	 *         if the argument is {@code null}
 	 * @since 1.1
 	 */
-	public void setOcppChargersKey(String ocppChargersKey) {
+	public final void setOcppChargersKey(String ocppChargersKey) {
 		this.ocppChargersKey = requireNonNullArgument(ocppChargersKey, "ocppChargersKey");
 	}
 
 	/**
 	 * Get the item key for OSCP Capacity Groups.
 	 *
-	 * @return the key, never {@literal null}; defaults to
+	 * @return the key, never {@code null}; defaults to
 	 *         {@link NodeUsages#OSCP_CAPACITY_GROUPS_KEY}
 	 * @since 1.1
 	 */
-	public String getOscpCapacityGroupsKey() {
+	public final String getOscpCapacityGroupsKey() {
 		return oscpCapacityGroupsKey;
 	}
 
@@ -845,10 +857,10 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 * @param oscpCapacityGroupsKey
 	 *        the oscpCapacityGroupsKey to set
 	 * @throws IllegalArgumentException
-	 *         if the argument is {@literal null}
+	 *         if the argument is {@code null}
 	 * @since 1.1
 	 */
-	public void setOscpCapacityGroupsKey(String oscpCapacityGroupsKey) {
+	public final void setOscpCapacityGroupsKey(String oscpCapacityGroupsKey) {
 		this.oscpCapacityGroupsKey = requireNonNullArgument(oscpCapacityGroupsKey,
 				"oscpCapacityGroupsKey");
 	}
@@ -856,11 +868,11 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	/**
 	 * Get the item key for OSCP Capacity.
 	 *
-	 * @return the key, never {@literal null}; defaults to
+	 * @return the key, never {@code null}; defaults to
 	 *         {@link NodeUsages#OSCP_CAPACITY_KEY}
 	 * @since 1.4
 	 */
-	public String getOscpCapacityKey() {
+	public final String getOscpCapacityKey() {
 		return oscpCapacityKey;
 	}
 
@@ -870,21 +882,21 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 * @param oscpCapacityKey
 	 *        the oscpCapacityKey to set
 	 * @throws IllegalArgumentException
-	 *         if the argument is {@literal null}
+	 *         if the argument is {@code null}
 	 * @since 1.4
 	 */
-	public void setOscpCapacityKey(String oscpCapacityKey) {
+	public final void setOscpCapacityKey(String oscpCapacityKey) {
 		this.oscpCapacityKey = requireNonNullArgument(oscpCapacityKey, "oscpCapacityKey");
 	}
 
 	/**
 	 * Get the item key for DNP3 Data Points.
 	 *
-	 * @return the key, never {@literal null}; defaults to
+	 * @return the key, never {@code null}; defaults to
 	 *         {@link NodeUsages#DNP3_DATA_POINTS_KEY}
 	 * @since 1.2
 	 */
-	public String getDnp3DataPointsKey() {
+	public final String getDnp3DataPointsKey() {
 		return dnp3DataPointsKey;
 	}
 
@@ -894,17 +906,17 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 * @param dnp3DataPointsKey
 	 *        the key to set
 	 * @throws IllegalArgumentException
-	 *         if the argument is {@literal null}
+	 *         if the argument is {@code null}
 	 * @since 1.2
 	 */
-	public void setDnp3DataPointsKey(String dnp3DataPointsKey) {
+	public final void setDnp3DataPointsKey(String dnp3DataPointsKey) {
 		this.dnp3DataPointsKey = requireNonNullArgument(dnp3DataPointsKey, "dnp3DataPointsKey");
 	}
 
 	/**
 	 * Get the item key for OAuth client credentials.
 	 *
-	 * @return the key, never {@literal null}; defaults to
+	 * @return the key, never {@code null}; defaults to
 	 *         {@link NodeUsages#OAUTH_CLIENT_CREDENTIALS_KEY}
 	 * @since 1.5
 	 */
@@ -918,7 +930,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 * @param oauthClientCredentialsKey
 	 *        the key to set
 	 * @throws IllegalArgumentException
-	 *         if the argument is {@literal null}
+	 *         if the argument is {@code null}
 	 * @since 1.5
 	 */
 	public final void setOauthClientCredentialsKey(String oauthClientCredentialsKey) {
@@ -929,7 +941,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	/**
 	 * Get the item key for Cloud Integrations data.
 	 *
-	 * @return the key, never {@literal null}; defaults to
+	 * @return the key, never {@code null}; defaults to
 	 *         {@link NodeUsages#CLOUD_INTEGRATIONS_DATA_KEY}
 	 * @since 1.6
 	 */
@@ -943,7 +955,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 * @param cloudIntegrationsDataKey
 	 *        the key to set
 	 * @throws IllegalArgumentException
-	 *         if the argument is {@literal null}
+	 *         if the argument is {@code null}
 	 * @since 1.6
 	 */
 	public final void setCloudIntegrationsDataKey(String cloudIntegrationsDataKey) {
@@ -956,7 +968,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 *
 	 * @return the key; defaults to {@link AccountBalance#ACCOUNT_CREDIT_KEY}
 	 */
-	public String getAccountCreditKey() {
+	public final String getAccountCreditKey() {
 		return accountCreditKey;
 	}
 
@@ -966,9 +978,9 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 * @param accountCreditKey
 	 *        the accountCreditKey to set
 	 * @throws IllegalArgumentException
-	 *         if the argument is {@literal null}
+	 *         if the argument is {@code null}
 	 */
-	public void setAccountCreditKey(String accountCreditKey) {
+	public final void setAccountCreditKey(String accountCreditKey) {
 		this.accountCreditKey = requireNonNullArgument(accountCreditKey, "accountCreditKey");
 	}
 
@@ -982,7 +994,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 *
 	 * @return the service
 	 */
-	public SnfTaxCodeResolver getTaxCodeResolver() {
+	public final @Nullable SnfTaxCodeResolver getTaxCodeResolver() {
 		return taxCodeResolver;
 	}
 
@@ -992,7 +1004,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 * @param taxCodeResolver
 	 *        the service to set
 	 */
-	public void setTaxCodeResolver(SnfTaxCodeResolver taxCodeResolver) {
+	public final void setTaxCodeResolver(@Nullable SnfTaxCodeResolver taxCodeResolver) {
 		this.taxCodeResolver = taxCodeResolver;
 	}
 
@@ -1001,7 +1013,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 *
 	 * @return the cache
 	 */
-	public Cache<String, VersionedMessages> getMessageCache() {
+	public final @Nullable Cache<String, VersionedMessages> getMessageCache() {
 		return messageCache;
 	}
 
@@ -1011,7 +1023,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 * @param messageCache
 	 *        the cache to set
 	 */
-	public void setMessageCache(Cache<String, VersionedMessages> messageCache) {
+	public final void setMessageCache(@Nullable Cache<String, VersionedMessages> messageCache) {
 		this.messageCache = messageCache;
 	}
 
@@ -1020,7 +1032,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 *
 	 * @return the services
 	 */
-	public List<SnfInvoiceDeliverer> getDeliveryServices() {
+	public final @Nullable List<SnfInvoiceDeliverer> getDeliveryServices() {
 		return deliveryServices;
 	}
 
@@ -1030,7 +1042,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 * @param deliveryServices
 	 *        the services to set
 	 */
-	public void setDeliveryServices(List<SnfInvoiceDeliverer> deliveryServices) {
+	public final void setDeliveryServices(@Nullable List<SnfInvoiceDeliverer> deliveryServices) {
 		this.deliveryServices = deliveryServices;
 	}
 
@@ -1039,7 +1051,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 *
 	 * @return the services
 	 */
-	public List<SnfInvoiceRendererResolver> getRendererResolvers() {
+	public final @Nullable List<SnfInvoiceRendererResolver> getRendererResolvers() {
 		return rendererResolvers;
 	}
 
@@ -1049,7 +1061,8 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 * @param rendererResolvers
 	 *        the services to set
 	 */
-	public void setRendererResolvers(List<SnfInvoiceRendererResolver> rendererResolvers) {
+	public final void setRendererResolvers(
+			@Nullable List<SnfInvoiceRendererResolver> rendererResolvers) {
 		this.rendererResolvers = rendererResolvers;
 	}
 
@@ -1059,7 +1072,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 *
 	 * @return the timeout, in seconds
 	 */
-	public int getDeliveryTimeoutSecs() {
+	public final int getDeliveryTimeoutSecs() {
 		return deliveryTimeoutSecs;
 	}
 
@@ -1069,7 +1082,7 @@ public class DefaultSnfInvoicingSystem implements SnfInvoicingSystem, SnfTaxCode
 	 * @param deliveryTimeoutSecs
 	 *        the timeout to set, in seconds, or {@literal 0} for no timeout
 	 */
-	public void setDeliveryTimeoutSecs(int deliveryTimeoutSecs) {
+	public final void setDeliveryTimeoutSecs(int deliveryTimeoutSecs) {
 		this.deliveryTimeoutSecs = deliveryTimeoutSecs;
 	}
 
