@@ -22,14 +22,17 @@
 
 package net.solarnetwork.central.user.billing.snf.domain;
 
+import static net.solarnetwork.util.ObjectUtils.nonnull;
+import static net.solarnetwork.util.ObjectUtils.requireNonNullArgument;
 import java.io.Serial;
 import java.math.BigDecimal;
 import java.time.Instant;
 import java.time.LocalDate;
-import java.util.Collections;
+import java.time.ZoneId;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import org.jspecify.annotations.Nullable;
 import net.solarnetwork.central.dao.BaseStringEntity;
 import net.solarnetwork.central.user.billing.domain.InvoiceItem;
 import net.solarnetwork.central.user.billing.domain.InvoiceItemUsageRecord;
@@ -48,7 +51,7 @@ public class InvoiceItemImpl extends BaseStringEntity implements InvoiceItem {
 
 	private final SnfInvoice invoice;
 	private final SnfInvoiceItem item;
-	private final List<InvoiceItemUsageRecord> itemUsageRecords;
+	private final @Nullable List<InvoiceItemUsageRecord> itemUsageRecords;
 	private final LocalDate startDate;
 	private final LocalDate endDate;
 
@@ -60,7 +63,7 @@ public class InvoiceItemImpl extends BaseStringEntity implements InvoiceItem {
 	 * @param item
 	 *        the item to wrap
 	 * @throws IllegalArgumentException
-	 *         if {@code invoice} or {@code item} are {@literal null}
+	 *         if {@code invoice} or {@code item} are {@code null}
 	 */
 	public InvoiceItemImpl(SnfInvoice invoice, SnfInvoiceItem item) {
 		this(invoice, item, null);
@@ -76,19 +79,13 @@ public class InvoiceItemImpl extends BaseStringEntity implements InvoiceItem {
 	 * @param itemUsageRecords
 	 *        the explicit usage records to use
 	 * @throws IllegalArgumentException
-	 *         if {@code invoice} or {@code item} are {@literal null}
+	 *         if {@code invoice} or {@code item} are {@code null}
 	 */
 	public InvoiceItemImpl(SnfInvoice invoice, SnfInvoiceItem item,
-			List<InvoiceItemUsageRecord> itemUsageRecords) {
+			@Nullable List<InvoiceItemUsageRecord> itemUsageRecords) {
 		super();
-		if ( invoice == null ) {
-			throw new IllegalArgumentException("The invoice argument must not be null.");
-		}
-		this.invoice = invoice;
-		if ( item == null ) {
-			throw new IllegalArgumentException("The item argument must not be null.");
-		}
-		this.item = item;
+		this.invoice = requireNonNullArgument(invoice, "invoice");
+		this.item = requireNonNullArgument(item, "item");
 		this.itemUsageRecords = itemUsageRecords;
 		this.startDate = invoice.getStartDate();
 		this.endDate = invoice.getEndDate();
@@ -102,14 +99,13 @@ public class InvoiceItemImpl extends BaseStringEntity implements InvoiceItem {
 	}
 
 	@Override
-	public Map<String, Object> getMetadata() {
+	public @Nullable Map<String, Object> getMetadata() {
 		return item.getMetadata();
 	}
 
 	@Override
 	public String getTimeZoneId() {
-		Address addr = invoice.getAddress();
-		return (addr != null ? addr.getTimeZoneId() : null);
+		return nonnull(invoice.getAddress(), "Address").getTimeZoneId();
 	}
 
 	@Override
@@ -119,8 +115,7 @@ public class InvoiceItemImpl extends BaseStringEntity implements InvoiceItem {
 
 	@Override
 	public String getItemType() {
-		InvoiceItemType type = item.getItemType();
-		return (type != null ? type.toString().toUpperCase(Locale.ENGLISH) : null);
+		return nonnull(item.getItemType(), "itemType").toString().toUpperCase(Locale.ENGLISH);
 	}
 
 	@Override
@@ -150,7 +145,7 @@ public class InvoiceItemImpl extends BaseStringEntity implements InvoiceItem {
 
 	@Override
 	public Instant getEnded() {
-		return null;
+		return endDate.atStartOfDay(ZoneId.of(getTimeZoneId())).toInstant();
 	}
 
 	@SuppressWarnings("unchecked")
@@ -164,10 +159,10 @@ public class InvoiceItemImpl extends BaseStringEntity implements InvoiceItem {
 			UsageInfo usage = UsageInfo.of((Map<String, ?>) metadata.get(SnfInvoiceItem.META_USAGE),
 					(List<Map<String, ?>>) metadata.get(SnfInvoiceItem.META_TIER_BREAKDOWN));
 			if ( usage != null ) {
-				return Collections.singletonList(usage);
+				return List.of(usage);
 			}
 		}
-		return null;
+		return List.of();
 	}
 
 	@Override
